<resources>
    <string name="app_name">Nmedia</string>
    <string name="nmedia_text">NMedia!!!</string>
    <string name="authorText">Netology. University of the internet professions of the future</string>
    <string name="publishedText">May 21 at 6:36 p.m.</string>
    <string name="contentText">Hello, this is the new Netology! Once upon a time, Netology began with online marketing intensives. Then there were courses in design, development, analytics and management. We grow ourselves and help students grow: from beginners to confident professionals. But the most important thing remains with us: we believe that everyone already has a force that makes you want more, aim higher, run faster. Our mission is to help get on the path of growth and start a chain of change → http://netolo.gy/fyb</string>
    <string name="avatar_netology">avatar netology</string>
    <string name="menu_post">menu post</string>
    <string name="removePost">Remove Post</string>
    <string name="text_post">Input text Post</string>
    <string name="description_save">Save</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="edit_post">Edit Post</string>
    <string name="chooser_share_post">Share post</string>
    <string name="description_post_save">post save</string>
    <string name="add_post">add post</string>
    <string name="videopost">videoPost</string>
    <string name="authorPost">AndreOv</string>
    <string name="publishedPost">1 february 10:12</string>
    <string name="test">555555555</string>


</resources>