<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">


        <ImageView
            android:id="@+id/editAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/avatar_netology"
            app:layout_constraintBottom_toBottomOf="@id/barrierTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/netology_48" />

        <TextView
            android:id="@+id/editAuthor"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/authorText"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editPublished"
            app:layout_constraintStart_toEndOf="@+id/editAvatar"
            app:layout_constraintTop_toTopOf="@+id/editAvatar"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/editPublished"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/publishedText"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/barrierTop"
            app:layout_constraintStart_toStartOf="@+id/editAuthor"
            app:layout_constraintTop_toBottomOf="@id/editAuthor" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editMenu"
            style="@style/Widget.AppTheme.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/menu_post"
            app:icon="@drawable/ic_baseline_more_vert_24"
            app:iconGravity="end"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="editAvatar,editPublished,editMenu"
            app:layout_constraintTop_toBottomOf="@id/editAvatar" />

        <TextView
            android:id="@+id/editContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autoLink="web"
            android:text="@string/contentText"
            app:layout_constraintBottom_toTopOf="@id/barrierBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrierTop" />

        <ImageView
            android:id="@+id/editVideo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/videopost"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editContent" />

        <TextView
            android:id="@+id/editUrlText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:hint="url video"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/barrierBottom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editVideo" />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="barrierTop,editAvatar,editPublished,editMenu,editContent,editVideo, editUrlText"
            app:layout_constraintTop_toBottomOf="@id/editContent"
            tools:layout_editor_absoluteY="236dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>