<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp" >


    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/barrierTop"
        app:srcCompat="@drawable/netology_48"
        android:contentDescription="@string/avatar_netology" />

    <TextView
        android:id="@+id/author"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/authorText"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/barrierTop"
        app:layout_constraintStart_toStartOf="@+id/author"
        app:layout_constraintTop_toBottomOf="@id/author"

        android:text="@string/publishedText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:iconPadding="0dp"
        app:iconGravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:icon="@drawable/ic_baseline_more_vert_24"
        android:contentDescription="@string/menu_post"
        style="@style/Widget.AppTheme.Text"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        app:constraint_referenced_ids="avatar,published,menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autoLink="web"
        android:text="@string/contentText"
        app:layout_constraintBottom_toTopOf="@id/barrierBottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierTop" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="barrierTop,avatar,published,menu,content"
        app:layout_constraintTop_toBottomOf="@id/content"
        tools:layout_editor_absoluteY="236dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/imageLike"
        app:iconTint="@color/like_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checkable="true"
        app:icon="@drawable/ic_like_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        style="@style/Widget.AppTheme.Text"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/textLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:text="10"
        app:layout_constraintStart_toEndOf="@id/imageLike"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        style="@style/Widget.AppTheme.Text"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/imageShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="48dp"
        android:checkable="true"
        app:layout_constraintStart_toEndOf="@id/textLike"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        app:icon="@drawable/ic_baseline_share_24"
        style="@style/Widget.AppTheme.Text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/textShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="5"
        app:layout_constraintStart_toEndOf="@id/imageShare"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        style="@style/Widget.AppTheme.Text"
         />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/textViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        style="@style/Widget.AppTheme.Text"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/imageViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/barrierBottom"
        app:layout_constraintEnd_toStartOf="@id/textViews"
        app:icon="@drawable/ic_baseline_visibility_24"
        style="@style/Widget.AppTheme.Text" />


</androidx.constraintlayout.widget.ConstraintLayout>